# crispy-forms-decorator

./: .gitignore  .travis.yml  LICENSE  Makefile  Pipfile  README.rst  crispy_forms_decorator.py  setup.cfg  setup.py
tests/: conftest.py  test_crispy_decorator.py  test_form_mixin.py
