[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
version = 0.1.0


[tool:pytest]
norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
addopts =
    -s
    --verbose
    --exitfirst
    --cache-clear
    --pythonwarnings=always
    --cov-report term-missing
    --cov-report term:skip-covered
    --cov=.

; Coverage settings
[coverage:run]
branch = True
omit =
    .tox/*
    .eggs/*
    dist


[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    self.fail\(
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
omit =
    .tox/*
    .eggs/*
    dist

; Bump version
[bumpversion:bumpversion]
current_version = 0.1.0
commit = True
tag = True
files =
    setup.cfg
    crispy_forms_decorator.py


[tox:tox]
envlist =
    py{27}-dj{110,111}
    py{34,35}-dj{110,111,20}
    py{36}-dj{20}

[testenv]
commands =
    pytest -s -v -x tests/

;whitelist_externals =
deps =
    pytest
    pytest-cov
    django-crispy-forms
    pipenv
    dj110: django>=1.10,<1.11
    dj111: django>=1.11,<2
    dj20:  django>=2.0,<3

; Coverage settings
