; setuptools stuff

[metadata]
name = crispy-forms-decorator
version = 0.2.0
author = Mikhail Porokhovnichenko
author_email = marazmiki@gmail.com
description =
    A syntax sugar for django-crispy-forms that allows simplifying
    form creation by using the @crispy decorator
long_description = file:README.rst
url = https://github.com/marazmiki/crispy-forms-decorator
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Information Technology
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules =  crispy_forms_decorator
zip_safe = False
tests_require =
    pytest
    pytest-cov
    pytest-isort
    pytest-flake8
    django
    django-crispy-forms
    flake8
    tox

[bdist_wheel]
universal = 1

; pytest stuff
[tool:pytest]
norecursedirs =
    *.egg
    .eggs
    dist
    build
    docs
    .tox
    .git
    __pycache__
addopts =
    -s
    --verbose
    --exitfirst
    --cache-clear
    --pythonwarnings=always
    --cov-report term-missing
    --cov-report term:skip-covered
    --cov=.
    --isort
    --flake8

; Coverage settings
[coverage:run]
branch = True
omit =
    .tox/*
    .eggs/*
    dist

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    self.fail\(
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
omit =
    .tox/*
    .eggs/*
    dist

; Bump version
[bumpversion:bumpversion]
current_version = 0.2.0
commit = True
tag = True
files =
    setup.cfg
    crispy_forms_decorator.py

; tox
[tox:tox]
envlist =
    py{27}-dj{111}
    py{34,35}-dj{111,20}
    py{36,37}-dj{20,21}

[testenv]
commands =
    pytest -s -v -x tests/

deps =
    pytest
    pytest-cov
    django-crispy-forms
    coveralls
    flake8

[testenv:py27-dj111]
basepython = python2.7
deps =
    django>=1.11,<2
    {[testenv]deps}

[testenv:py34-dj111]
basepython = python3.4
deps =
    django>=1.11,<2
    {[testenv]deps}

[testenv:py34-dj20]
basepython = python3.4
deps =
    django>=2.0,<2.1
    {[testenv]deps}

[testenv:py35-dj111]
basepython = python3.5
deps =
    django>=1.11,<2
    {[testenv]deps}

[testenv:py35-dj20]
basepython = python3.5
deps =
    django>=2.0,<2.1
    {[testenv]deps}

[testenv:py36-dj111]
basepython = python3.6
deps =
    django>=1.11,<2
    {[testenv]deps}

[testenv:py36-dj20]
basepython = python3.6
deps =
    django>=2.0,<2.1
    {[testenv]deps}

